--- a/index.html
+++ b/index.html
@@ -719,8 +719,7 @@
         </div>
         <div class="hero-content">
             <h1>Hey, I'm Anisha 👋</h1>
-            <p class="subtitle">Where code meets curiosity
-And every idea hums a melody. </p>
+            <p class="subtitle">Engineering dreams. Debugging reality. </p>
 
         </div>
     </section>
@@ -1199,4 +1198,5 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
         }
     </style>
 </body>
+
 </html>
