--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
             </div>
             
             <div class="experience-item">
-                <div class="experience-title">Proggrammar Analyst</div>
+                <div class="experience-title">Programmer Analyst</div>
                 <div class="experience-company">Clario (via Cognizant)</div>
                 <div class="experience-duration">July 2022 – Jan 2023</div>
                 <div class="experience-description">
@@ -1206,5 +1206,6 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
 </body>
 
 </html>
+
 
 
