--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
             <div class="experience-item">
                 <div class="experience-title">Programmer Analyst</div>
                 <div class="experience-company">Clario (via Cognizant)</div>
-                <div class="experience-duration">July 2022 – Jan 2023</div>
+                <div class="experience-duration">Jan 2024 – Present</div>
                 <div class="experience-description">
                     Delivered L1 support for Exchange Online, Outlook, Teams, OneDrive, SharePoint, etc. 
                     Resolved 2000+ tickets monthly using ServiceNow, Active Directory, Azure AD, and PowerShell 
@@ -1206,6 +1206,7 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
 </body>
 
 </html>
+
 
 
 
