--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
         <div class="experience-timeline">
             <div class="experience-item">
                 <div class="experience-title">🤖 AI/ML Intern</div>
-                <div class="experience-company">Asma Embedded Solutions</div>
+                <div class="experience-company">Amsa Embedded Solutions</div>
                 <div class="experience-duration">During College Years</div>
                 <div class="experience-description">
                     Built academic-grade AI/ML-based mini and major projects for final-year engineering students. 
@@ -1206,6 +1206,7 @@ Let’s talk AI, stocks, side hustles, or even how to make Earth greener (with f
 </body>
 
 </html>
+
 
 
 
